// Copyright 2016-03-08
// ChuanTonG.HuanG@Gmail.com  All rights reserved.
//

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.toontong.box";
option java_outer_classname = "BoxPing";

package ping;

// Interface exported by the server.
service PingService {
    rpc Ping(MsgPing) returns (Pong) {}
}

message MsgPing {
    string Msg = 1;
}

message Pong {
    string Msg = 1;
}